--- a/index.html
+++ b/index.html
@@ -158,7 +158,16 @@
     </div>
   </section>
 
-  
+  <!-- Contacto -->
+  <section id="contacto" class="container text-center py-5">
+
+    <div>
+      <h2 class="pb-3">Contacto</h2>
+      <div class="dropdown-divider"></div>
+    </div>
+    <div class="typeform-widget" data-url="https://form.typeform.com/to/gkaFgQeH?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+
+  </section>
 
   <!-- Script bootstrap -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
