--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     
     <div class="container">
       <div class="row">
-        <div class="card-deck">
+        <div class="card-deck px-4">
           <div class="card">
             <img src="assets/img/card1.jpg" class="card-img-top">
             <div class="card-body">
@@ -165,9 +165,23 @@
       <h2 class="pb-3">Contacto</h2>
       <div class="dropdown-divider"></div>
     </div>
-    <div class="typeform-widget" data-url="https://form.typeform.com/to/gkaFgQeH?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-
+    <div class="typeform-widget px-4" data-url="https://form.typeform.com/to/gkaFgQeH?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
   </section>
+
+  <footer class="text-center text-white">
+    <div class="row container m-auto">
+      <div class="col-12 col-sm-6">
+        <h2 class="pt-2">VIAJES CHILE</h2>
+      </div>
+
+      <div class="col-12 col-sm-6 mt-2 mt-sm-0 pb-3 pb-sm-0">
+        <i class="fab fa-github-square"></i>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-facebook-square"></i>
+      </div>
+    </div>
+  </footer>
 
   <!-- Script bootstrap -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
