--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="assets/img/viajes.svg">
+  <link rel=”mask-icon” href=”assets/img/viajes.svg” color="#000000">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Viajes Chile</title>
@@ -10,6 +12,11 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -23,7 +30,7 @@
   <!-- Navbar -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="#carousel">
         <img src="assets/img/viajes.svg" width="30" height="30" class="d-inline-block align-top" alt="">
         Viajes Chile
       </a>
@@ -34,16 +41,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#carousel">Inicio<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Quienes somos</a>
+            <a class="nav-link" href="#presentation">Quienes somos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Destacados</a>
+            <a class="nav-link" href="#destacados">Destacados</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contactos</a>
+            <a class="nav-link" href="#contacto">Contacto</a>
           </li>
         </ul>
       </div>
@@ -80,7 +87,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="icon">
-          <i class="fas fa-plane fa-2x"></i>
+          <i  data-toggle="tooltip" data-placement="bottom" title="Viajes convenientes"class="fas fa-plane fa-2x"></i>
         </div>
         <p class="my-3 text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -95,12 +102,12 @@
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
           exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
         <div class="icon">
-          <i class="fas fa-mountain fa-2x"></i>
+          <i  data-toggle="tooltip" data-placement="bottom" title="Turismo activo" class="fas fa-mountain fa-2x"></i>
         </div>
       </div>
       <div class="col-md-4">
         <div class="icon">
-          <i class="fas fa-route fa-2x"></i>
+          <i  data-toggle="tooltip" data-placement="bottom" title="La mejor logistica" class="fas fa-route fa-2x"></i>
         </div>
         <p class="my-3 text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -117,26 +124,32 @@
       <h2 class="my-4 text-center">Destacados</h2>
       <div class="dropdown-divider"></div>
     </div>
-    
+
     <div class="container">
       <div class="row">
-        <div class="card-deck px-4">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3">
           <div class="card">
-            <img src="assets/img/card1.jpg" class="card-img-top">
+            <img src="assets/img/card1.jpg" class="card-img-top" data-toggle="modal" data-target="#Patagonia">
             <div class="card-body">
               <h4 class="card-title mb-3">Lorem ipsum dolor sit amet</h4>
               <p class="card-text font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
                 vitae harum ipsa quo placeat accusantium perferendis soluta.</p>
             </div>
           </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3">
           <div class="card">
-            <img src="assets/img/card2.jpg" class="card-img-top">
+            <img src="assets/img/card2.jpg" class="card-img-top" data-toggle="popover" title="Worl travel Awards" data-content="Mejor Destino de Naturaleza">
             <div class="card-body">
               <h4 class="card-title mb-3">Lorem ipsum dolor sit amet</h4>
               <p class="card-text font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
                 vitae harum ipsa quo placeat accusantium perferendis soluta.</p>
             </div>
           </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3">
           <div class="card">
             <img src="assets/img/card3.jpg" class="card-img-top">
             <div class="card-body">
@@ -145,6 +158,9 @@
                 vitae harum ipsa quo placeat accusantium perferendis soluta.</p>
             </div>
           </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3">
           <div class="card">
             <img src="assets/img/card4.jpg" class="card-img-top">
             <div class="card-body">
@@ -165,7 +181,9 @@
       <h2 class="pb-3">Contacto</h2>
       <div class="dropdown-divider"></div>
     </div>
-    <div class="typeform-widget px-4" data-url="https://form.typeform.com/to/gkaFgQeH?typeform-medium=embed-snippet" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+    <div class="typeform-widget px-4" data-url="https://form.typeform.com/to/gkaFgQeH?typeform-medium=embed-snippet"
+      style="width: 100%; height: 500px;"></div>
+    <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })()</script>
   </section>
 
   <footer class="text-center text-white">
@@ -183,6 +201,33 @@
     </div>
   </footer>
 
+  <!-- Modal -->
+  <div class="modal fade" id="Patagonia" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Patagonia</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body pl-5">
+          <ul>
+            <li>Habitacion 2 personas</li>
+            <li>5 noches 6 dias</li>
+            <li>Pet friendly</li>
+            <li>Desayuno incluido</li>
+            <li>Tours privados</li>
+            <li>Barra libre</li>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Seguir buscando</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Script bootstrap -->
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
@@ -192,6 +237,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
     integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
     crossorigin="anonymous"></script>
+
+    <!-- My js  -->
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
