--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="icon">
-          <i  data-toggle="tooltip" data-placement="bottom" title="Viajes convenientes"class="fas fa-plane fa-2x"></i>
+          <i data-toggle="tooltip" data-placement="bottom" title="Viajes convenientes" class="fas fa-plane fa-2x"></i>
         </div>
         <p class="my-3 text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -102,12 +102,12 @@
           do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
           exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
         <div class="icon">
-          <i  data-toggle="tooltip" data-placement="bottom" title="Turismo activo" class="fas fa-mountain fa-2x"></i>
+          <i data-toggle="tooltip" data-placement="bottom" title="Turismo activo" class="fas fa-mountain fa-2x"></i>
         </div>
       </div>
       <div class="col-md-4">
         <div class="icon">
-          <i  data-toggle="tooltip" data-placement="bottom" title="La mejor logistica" class="fas fa-route fa-2x"></i>
+          <i data-toggle="tooltip" data-placement="bottom" title="La mejor logistica" class="fas fa-route fa-2x"></i>
         </div>
         <p class="my-3 text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -127,7 +127,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3  d-flex align-items-stretch">
           <div class="card">
             <img src="assets/img/card1.jpg" class="card-img-top" data-toggle="modal" data-target="#Patagonia">
             <div class="card-body">
@@ -138,9 +138,10 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3 d-flex align-items-stretch">
           <div class="card">
-            <img src="assets/img/card2.jpg" class="card-img-top" data-toggle="popover" title="Worl travel Awards" data-content="Mejor Destino de Naturaleza">
+            <img src="assets/img/card2.jpg" class="card-img-top card-height" data-toggle="popover" title="World travel Awards"
+              data-content="Mejor Destino de Naturaleza">
             <div class="card-body">
               <h4 class="card-title mb-3">Lorem ipsum dolor sit amet</h4>
               <p class="card-text font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
@@ -149,7 +150,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3 d-flex align-items-stretch">
           <div class="card">
             <img src="assets/img/card3.jpg" class="card-img-top">
             <div class="card-body">
@@ -160,7 +161,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3 my-3 d-flex align-items-stretch">
           <div class="card">
             <img src="assets/img/card4.jpg" class="card-img-top">
             <div class="card-body">
@@ -193,10 +194,18 @@
       </div>
 
       <div class="col-12 col-sm-6 mt-2 mt-sm-0 pb-3 pb-sm-0">
-        <i class="fab fa-github-square"></i>
-        <i class="fab fa-linkedin"></i>
-        <i class="fab fa-twitter-square"></i>
-        <i class="fab fa-facebook-square"></i>
+        <a href="https://github.com/" target="_blank">
+          <i class="fab fa-github-square"></i>
+      </a>
+      <a href="https://linkedin.com/" target="_blank">
+          <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://twitter.com/" target="_blank">
+          <i class="fab fa-twitter-square"></i>
+      </a>
+      <a href="https://www.facebook.com/" target="_blank">
+          <i class="fab fa-facebook-square"></i>
+      </a>
       </div>
     </div>
   </footer>
@@ -238,8 +247,8 @@
     integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
     crossorigin="anonymous"></script>
 
-    <!-- My js  -->
-    <script src="assets/js/main.js"></script>
+  <!-- My js  -->
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
