--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
   </nav>
   <!-- Carousel -->
-  <header id="carousel">
+  <header id="carousel" class="pt-md-0">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
